--- a/css/main.css
+++ b/css/main.css
@@ -16,13 +16,20 @@ body {
   position: relative;
 }
 .header .brand {
+  color: #fff;
   position: absolute;
   top: 15%;
   left: 50%;
-  color: #fff;
   transform: translate(-50%, -50%);
   display: flex;
   align-items: center;
+}
+.header-banner {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .logo {
@@ -56,6 +63,41 @@ body {
   font-weight: 300;
   letter-spacing: 2px;
   text-transform: uppercase;
+}
+
+.main-heading {
+  font-family: "Dancing Script", cursive;
+  font-size: 100px;
+  font-weight: 300;
+  color: #d3ab55;
+  margin-bottom: 40px;
+}
+
+.sub-heading {
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 60px;
+  font-weight: 300;
+  color: #bbb;
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.main-btn {
+  width: 170px;
+  height: 50px;
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 14px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  color: #d3ab55;
+  background-color: transparent;
+  border: 1px solid #d3ab55;
+  cursor: pointer;
+  transition: all 0.5s;
+}
+.main-btn:hover {
+  background-color: #d3ab55;
+  color: #000;
 }
 
 /*# sourceMappingURL=main.css.map */
