--- a/scss/_componentes.scss
+++ b/scss/_componentes.scss
@@ -24,3 +24,39 @@
     text-align: center;
     @include textStyles;
 }
+
+.main-heading{
+    font-family: $font-dancingScript;
+    font-size: 100px;
+    font-weight: 300;
+    color: $color-primary;
+    margin-bottom: 40px;
+}
+
+.sub-heading{
+    font-family: $font-josefinSans;
+    font-size: 60px;
+    font-weight: 300;
+    color: $color-secundary;
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.main-btn{
+    width: 170px;
+    height: 50px;
+    font-family: $font-josefinSans;
+    font-size: 14px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    color: $color-primary;
+    background-color: transparent;
+    border: 1px solid $color-primary;
+    cursor: pointer;
+    transition: all 0.5s;
+
+    &:hover{
+        background-color: $color-primary;
+        color: $color-black;
+    }
+}
