Agregar sección de galería y pie de página con estilos en CSS y HTML

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -15,10 +15,10 @@ $font-nunito:"Nunito", sans-serif;
     align-items: center;
 }
 
-@mixin textStyles{
+@mixin textStyles($transform:uppercase){
     font-weight: 300;
     letter-spacing: 2px;
-    text-transform: uppercase;
+    text-transform: $transform;
 }
 
 @mixin centering($topValue){
