--- a/scss/_componentes.scss
+++ b/scss/_componentes.scss
@@ -60,3 +60,63 @@
         color: $color-black;
     }
 }
+.card{
+    width: 33.33%;
+    height: 30vw;
+    position: relative;
+    overflow: hidden;
+
+    &-overlay{
+        position:absolute;
+        top: 0;
+        left: -100%;
+        background-color: rgba($color-primary,0.6);
+        width: 100%;
+        height: 100%;
+        color:$color-white;
+        z-index: 10;
+        @include flexLayout;
+        flex-direction: column;
+        transition: left 0.7s ;
+
+        &-heading{
+            font-family: $font-nunito;
+            font-size: 50px;
+            @include textStyles(capitalize);
+        }
+
+        &-paragraph{
+            font-family: $font-josefinSans;
+            font-size: 30px;
+            margin-bottom: 30px;
+            @include textStyles(capitalize);
+        }
+
+        &-btn{
+            width: 180px;
+            height: 40px;
+            color: $color-primary;
+            font-family: $font-josefinSans;
+            background-color: $color-white;
+            font-size: 14px;
+            font-weight: bold;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            border: 1px solid $color-primary;
+            border-radius: 30px;
+            outline: none;
+            cursor: pointer;
+        }
+        
+    }
+
+    &-img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        opacity: 0.5;
+    }
+    &:hover .card-overlay{
+        left: 0;
+    }
+}
