--- a/scss/_cuerpo.scss
+++ b/scss/_cuerpo.scss
@@ -7,6 +7,112 @@ body{
     background-color: $color-dark;
 }
 
+.left-img{
+    width: 300px;
+}
+
+.navbar{
+    position: relative;
+    z-index: 1;
+
+    &-navigation{
+        display: flex;
+        
+
+        &-left{
+            width: 50vw;
+            height: 100vh;
+            background-color: $color-dark;
+            position: fixed;
+            right: 1;
+            left: -50vw;
+            transition: left 0.8s;
+
+            .left-img{
+                position: absolute;
+                width: 50%;
+                box-shadow: 0 15px 60px rgba($color-black,0.4);
+                opacity: 0.7;
+                border-radius: 10px;
+            }
+
+            .left-img-1{
+                top: 15%;
+                left: 15%;
+                box-shadow: 0 15px 60px rgba($color-black,0.4);
+                opacity: 0.7;
+                border-radius: 10px;
+            }
+            .left-img-2{
+                top: 35%;
+                left: 25%;
+                box-shadow: 0 15px 60px rgba($color-black,0.4);
+                opacity: 0.7;
+                border-radius: 10px;
+            }
+            .left-img-3{
+                top: 55%;
+                left: 35%;
+                box-shadow: 0 15px 60px rgba($color-black,0.4);
+                opacity: 0.7;
+                border-radius: 10px;
+            }
+        }
+
+
+        &-right{
+            width: 50vw;
+            height: 100vh;
+            background-color: #1f1d1d;
+            position: fixed;
+            right: 0;
+            @include flexLayout;
+            right: -50vw;
+            transition: right 0.8s;
+
+
+            .nav-list{
+                &-item{
+                    list-style: none;
+                }
+
+                &-link{
+                    font-size: 50px;
+                    @include textStyles(capitalize);
+                    color: $color-secundary;
+                    text-decoration: none;
+                    display: block;
+                    margin: 20px;
+                    text-align: center;
+                }
+            }
+
+        }
+    }
+
+    
+}
+
+.checkbox:checked ~ .navbar-navigation .navbar-navigation-left{
+        left: 0;
+    }
+    
+    .checkbox:checked ~ .navbar-navigation .navbar-navigation-right{
+        right: 0;
+    }
+
+    .checkbox:checked ~ .hamburguer-menu .menu{
+        transform: rotateZ(90deg);
+    }
+    .checkbox:checked ~ .hamburguer-menu .menu-line-1{
+        transform: rotateZ(-40deg);
+    }
+    .checkbox:checked ~ .hamburguer-menu .menu-line-2{
+        opacity: 0;
+    }
+    .checkbox:checked ~ .hamburguer-menu .menu-line-3{
+        transform: rotateZ(40deg);
+    }
 .header{
     width: 100%;
     height: 100vh;
@@ -31,14 +137,36 @@ body{
     display: flex;
     align-items: center;
     margin: 100px 0;
+    @media (max-width:1000px){
+        height: 60vh;
+        
+    }
+
+    @media (max-width:500px){
+        height: 50vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        
+    }
     
 
     &-left{
         width: 40%;
 
+        @media (max-width:500px){
+            width: 100%;
+            display: flex;
+            justify-content: center;
+        }
+
         img{
             width: 100%;
             opacity: 0.7;
+
+            @media (max-width:500px){
+                width: 50%;
+            }
         }
     }
     &-right{
@@ -49,13 +177,31 @@ body{
         padding: 0 100px;
         box-sizing: border-box;
 
+        @media (max-width:1000px){
+            width: 100%;
+        }
+    
+        @media (max-width:500px){
+            
+        }
+
         .stars{
             margin: 30px 0;
+
+            
 
             .star{
                 font-size: 15px;
                 color: $color-primary;
                 margin-left: 10px;
+
+                @media (max-width:1000px){
+                    font-size: 20px;
+                }
+        
+                @media (max-width:500px){
+                    font-size: 15px;
+                }
             }
         }
 
@@ -69,6 +215,13 @@ body{
             &::first-letter{
                 padding-left: 50px;
             }
+            @media (max-width:1000px){
+                font-size: 16px;
+            }
+        
+            @media (max-width:500px){
+                font-size: 12px;
+            }
         }
     }
 }
@@ -77,6 +230,7 @@ body{
     .cards-wrapper{
         display: flex;
         flex-wrap: wrap;
+        
     }
     
 }
@@ -105,6 +259,13 @@ body{
         font-size: 50px;
         color: $color-secundary;
         transition: color 0.7s;
+        @media (max-width:1000px){
+            font-size: 30px;
+        }
+    
+        @media (max-width:500px){
+            font-size: 20px;
+        }
     
         &:hover{
             color: $color-primary;
@@ -115,7 +276,18 @@ body{
         font-family: $font-josefinSans;
         font-size: 18px;
         color: $color-secundary;
-        @include textStyles(capitalize)
+        @include textStyles(capitalize);
+        @media (max-width:1000px){
+            font-size: 20px;
+            padding: 10px;
+            margin-left: 10px;
+        }
+    
+        @media (max-width:500px){
+            font-size: 16px;
+            display: block;
+            margin-left: 10px;  
+        }
     }
 
 }
