--- a/scss/_componentes.scss
+++ b/scss/_componentes.scss
@@ -1,3 +1,32 @@
+.hamburguer-menu{
+    width: 40px;
+    height: 40px;
+    position: fixed;
+    top: 10%;
+    right: 5%;
+    z-index: 10;
+
+    .menu{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        cursor: pointer;
+        transition: transform 0.5s;
+
+        &-line{
+            width: 100%;
+            height: 4px;
+            background-color: $color-primary;
+            transform-origin: right;
+            transition: all 0.5s 0.5s;
+        }
+        
+        
+    }
+}
+
 .logo{
     font-size: 70px;
     color: $color-primary;
@@ -8,6 +37,19 @@
     text-decoration: none;
     margin-right: 20px;
     @include flexLayout;
+
+    @media (max-width:1000px){
+        font-size: 50px;
+        width: 90px;
+        height: 90px;
+    }
+
+    @media (max-width:500px){
+        font-size: 30px;
+        width: 50px;
+        height: 50px;
+    }
+
 }
 
 .main-name{
@@ -15,31 +57,60 @@
     font-size: 50px;
     color: $color-secundary;
     @include textStyles;
+    @media (max-width:1000px){
+        font-size: 40px;
+    }
+
+    @media (max-width:500px){
+        font-size: 30px;
+    }
 }
 
 .sub-name{
-    font-family: $font-josefinSans;
     font-size: 18px;
     color: $color-secundary;
     text-align: center;
     @include textStyles;
+
+    @media (max-width:1000px){
+        font-size: 16px;
+    }
+    @media (max-width:500px){
+        font-size: 16px;
+    }
+    
 }
 
 .main-heading{
-    font-family: $font-dancingScript;
     font-size: 100px;
     font-weight: 300;
     color: $color-primary;
     margin-bottom: 40px;
+
+    @media (max-width:1000px){
+        font-size: 40px;
+    }
+
+    @media (max-width:500px){
+        font-size: 30px;
+    }
 }
 
 .sub-heading{
-    font-family: $font-josefinSans;
     font-size: 60px;
     font-weight: 300;
     color: $color-secundary;
     text-align: center;
     margin-bottom: 40px;
+
+    @media (max-width:1000px){
+        font-size: 16px;
+    }
+
+    @media (max-width:500px){
+        font-size: 12px;
+        margin-bottom: 30px;
+    }
 }
 
 .main-btn{
@@ -83,6 +154,13 @@
             font-family: $font-nunito;
             font-size: 50px;
             @include textStyles(capitalize);
+            @media (max-width:1000px){
+                font-size: 30px;
+            }
+        
+            @media (max-width:500px){
+                display: none;
+            }
         }
 
         &-paragraph{
@@ -90,6 +168,13 @@
             font-size: 30px;
             margin-bottom: 30px;
             @include textStyles(capitalize);
+            @media (max-width:1000px){
+                font-size: 30px;
+            }
+        
+            @media (max-width:500px){
+                display: none;
+            }
         }
 
         &-btn{
@@ -106,6 +191,14 @@
             border-radius: 30px;
             outline: none;
             cursor: pointer;
+            @media (max-width:1000px){
+                font-size: 10px;
+            }
+        
+            @media (max-width:500px){
+                font-size: 6px;
+                width: 100px;
+            }
         }
         
     }
